--- a/Stack-200/docker-compose.yml
+++ b/Stack-200/docker-compose.yml
@@ -2,31 +2,31 @@ version: "2.1"
 
 services:
   mysql:
-    image: mysql:5.6
+    image: mysql:5.5
     ports:
       - 3306:3306
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: PM-Testdb
-    container_name: pm220-db
+    container_name: pm200-db
 
   processmaker:
     depends_on:
       - mysql
-    image: devopsstacks/pm:220
+    image: devopsstacks/pm:200
     ports:
       - 80:80
       - 443:443
     restart: always
-    container_name: pm220-app
+    container_name: pm200-app
     environment:
-      PM_URL: artifacts.processmaker.net/official/processmaker-3.2.2+001.tar.gz
+      PM_URL: https://ufpr.dl.sourceforge.net/project/processmaker/ProcessMaker/3.0.1.8/processmaker-3.0.1.8-community.tar.gz
 
   phpmyadmin:
     depends_on:
       - mysql
     image: phpmyadmin/phpmyadmin
-    container_name: pm220-phpmyadmin
+    container_name: pm200-phpmyadmin
     environment:
      - PMA_ARBITRARY=1
     restart: always
