--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -2,7 +2,7 @@
 FROM amazonlinux:2017.09
 
 # Maintainer
-MAINTAINER Team DevOps "devops@processmaker.com"
+LABEL maintainer="devops@processmaker.com"
 
 LABEL processmaker-version = "3.2.2" \
       processmaker-stack="N220"
