--- a/Stack-200/Dockerfile
+++ b/Stack-200/Dockerfile
@@ -7,9 +7,10 @@ LABEL maintainer="devops@processmaker.com"
 LABEL processmaker-stack="200"
 
 # Install processmaker 
-COPY ["installpm.sh", "/tmp/"]
-COPY ["servicespm.sh", "/usr/bin/"]
-COPY ["pmos.conf", "/etc/httpd/conf.d/"]
+COPY ["conf/installpm.sh", "/tmp/"]
+COPY ["conf/servicespm.sh", "/usr/bin/"]
+COPY ["conf/pmos.conf", "/etc/httpd/conf.d/"]
+COPY ["conf/app.php", "/tmp/"]
 RUN  chmod 700 /tmp/installpm.sh && \
      chmod 700 /usr/bin/servicespm.sh && \
      /bin/sh /tmp/installpm.sh
