--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -8,14 +8,15 @@ LABEL processmaker-version = "3.2.2" \
       processmaker-stack="N220"
 
 # Install processmaker 
-COPY ["installpm.sh", "/tmp/"]
-COPY ["servicespm.sh", "/usr/bin/"]
+COPY ["conf/installpm.sh", "/tmp/"]
+COPY ["conf/servicespm.sh", "/usr/bin/"]
 RUN  chmod 700 /tmp/installpm.sh && \
      chmod 700 /usr/bin/servicespm.sh && \
      /bin/sh /tmp/installpm.sh      
-COPY ["php-fpm.conf", "/etc/php-fpm.d/processmaker.conf"]
-COPY ["nginx.conf", "/etc/nginx/nginx.conf"]
-COPY ["processmaker.conf", "/etc/nginx/conf.d/processmaker.conf"]
+COPY ["conf/php-fpm.conf", "/etc/php-fpm.d/processmaker.conf"]
+COPY ["conf/nginx.conf", "/etc/nginx/nginx.conf"]
+COPY ["conf/processmaker.conf", "/etc/nginx/conf.d/processmaker.conf"]
+COPY ["conf/app.php", "/tmp/"]
 
 # Docker entrypoint
 EXPOSE 80 443
