--- a/Stack-205/docker-compose.yml
+++ b/Stack-205/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     restart: always
     container_name: pm205-app
     environment:
-      PM_URL: artifacts.processmaker.net/official/processmaker-3.2.2+001.tar.gz
+      PM_URL:  http://bitnami.processmaker.com/official/processmaker-3.2.1.tar.gz
 
   phpmyadmin:
     depends_on:
