--- a/Stack-200/Dockerfile
+++ b/Stack-200/Dockerfile
@@ -8,10 +8,14 @@ LABEL processmaker-stack="200"
 
 # Install processmaker 
 COPY ["conf/installpm.sh", "/tmp/"]
+COPY ["conf/integrations.sh", "/tmp/"]
+COPY ["conf/pmoptional.sh", "/tmp/"]
 COPY ["conf/servicespm.sh", "/usr/bin/"]
 COPY ["conf/pmos.conf", "/etc/httpd/conf.d/"]
 COPY ["conf/app.php", "/tmp/"]
 RUN  chmod 700 /tmp/installpm.sh && \
+     chmod 700 /tmp/integrations.sh && \
+     chmod 700 /tmp/pmoptional.sh && \
      chmod 700 /usr/bin/servicespm.sh && \
      /bin/sh /tmp/installpm.sh
      
