--- a/Stack-N225/Dockerfile
+++ b/Stack-N225/Dockerfile
@@ -8,8 +8,12 @@ LABEL processmaker-stack="N225"
 
 # Install processmaker 
 COPY ["conf/installpm.sh", "/tmp/"]
+COPY ["conf/integrations.sh", "/tmp/"]
+COPY ["conf/pmoptional.sh", "/tmp/"]
 COPY ["conf/servicespm.sh", "/usr/bin/"]
 RUN  chmod 700 /tmp/installpm.sh && \
+     chmod 700 /tmp/integrations.sh && \
+     chmod 700 /tmp/pmoptional.sh && \
      chmod 700 /usr/bin/servicespm.sh && \
      /bin/sh /tmp/installpm.sh      
 COPY ["conf/php-fpm.conf", "/etc/php-fpm.d/processmaker.conf"]
