--- a/BuildMobile/Dockerfile
+++ b/BuildMobile/Dockerfile
@@ -1,6 +1,39 @@
 # Base Image
 FROM node:9-stretch
-RUN apt-get update -y && apt-get -y install unzip && apt-get -y install wget
-RUN wget -O /tmp/android-studio-ide-182.5314842-linux.zip https://dl.google.com/dl/android/studio/ide-zips/3.3.2.0/android-studio-ide-182.5314842-linux.zip
-RUN unzip /tmp/android-studio-ide-182.5314842-linux.zip -d /opt && rm -f /tmp/android-studio-ide-182.5314842-linux.zip
+
+RUN apt-get update -y && apt-get -y install unzip && apt-get -y install software-properties-common
+
+RUN \
+  echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | debconf-set-selections && \
+  add-apt-repository -y ppa:webupd8team/java && \
+  apt-get update && \
+  apt-get install -y oracle-java8-installer --allow-unauthenticated && \
+  rm -rf /var/lib/apt/lists/* && \
+  rm -rf /var/cache/oracle-jdk8-installer
+
+
+# Define commonly used JAVA_HOME variable
+ENV JAVA_HOME /usr/lib/jvm/java-8-oracle
+
+
+ENV SDK_URL="https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip" \
+    ANDROID_HOME="/usr/local/android-sdk" \
+    ANDROID_VERSION=28 \
+    ANDROID_BUILD_TOOLS_VERSION=28.0.3
+# Download Android SDK
+RUN mkdir "$ANDROID_HOME" .android \
+    && cd "$ANDROID_HOME" \
+    && curl -o sdk.zip $SDK_URL \
+    && unzip sdk.zip \
+    && rm sdk.zip \
+    && mkdir "$ANDROID_HOME/licenses" || true \
+    && echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license" \
+    && yes | $ANDROID_HOME/tools/bin/sdkmanager --licenses
+# Install Android Build Tool and Libraries
+RUN $ANDROID_HOME/tools/bin/sdkmanager --update
+RUN $ANDROID_HOME/tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS_VERSION}" \
+    "platforms;android-${ANDROID_VERSION}" \
+    "platform-tools"
+# Install Build Essentials
+RUN apt-get update && apt-get install build-essential -y && apt-get install file -y && apt-get install apt-utils -y
 ENTRYPOINT ["/bin/bash"]
