--- a/BuildMobile/Dockerfile
+++ b/BuildMobile/Dockerfile
@@ -35,5 +35,5 @@ RUN $ANDROID_HOME/tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS_VERSIO
     "platforms;android-${ANDROID_VERSION}" \
     "platform-tools"
 # Install Build Essentials
-RUN apt-get update && apt-get install build-essential -y && apt-get install file -y && apt-get install apt-utils -y
+RUN apt-get update && apt-get install build-essential -y && apt-get install file -y && apt-get install apt-utils -y && apt-get -y install jq && apt-get -y install awscli
 ENTRYPOINT ["/bin/bash"]
