--- a/spark/conf/processmaker-echo-server.conf
+++ b/spark/conf/processmaker-echo-server.conf
@@ -1,5 +1,6 @@
+[program:echo-server]
 process_name=%(program_name)s_%(process_num)02d
-command=/bin/bash -c 'source ~/.bash_profile  && node /opt/processmaker/node_modules/laravel-echo-server/bin/server.js start'
+command=/bin/bash -c 'node /usr/lib/node_modules/laravel-echo-server/bin/server.js start'
 directory=/opt/processmaker
 autostart=true
 autorestart=true
