--- a/BuildBot/Dockerfile
+++ b/BuildBot/Dockerfile
@@ -1,7 +1,7 @@
 # Base Image
 FROM debian:stretch-slim
 # Install Build Essentials
-RUN apt-get install file -y && apt-get install apt-utils -y && apt-get -y install jq && apt-get -y install jq awscli && apt-get install -y php && apt-get install -y ant
+RUN apt-get -y install jq && apt-get install -y php && apt-get install -y ant
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer && chmod +x /usr/local/bin/composer
 # Remove default node
