--- a/BuildBot/Dockerfile
+++ b/BuildBot/Dockerfile
@@ -1,14 +1,12 @@
 # Base Image
-FROM debian:stretch-slim
+FROM node:8.9-alpine
+
+RUN apt-get update -y && apt-get -y install unzip && apt-get -y install software-properties-common
+
 # Install Build Essentials
-RUN sudo apt-get update -y
-RUN sudo apt-get install jq -y && sudo apt-get install php -y && sudo apt-get install ant -y
+RUN apt-get update -y && apt-get install build-essential -y && apt-get install file -y && apt-get install apt-utils -y && apt-get -y install jq && apt-get -y install jq awscli && apt-get install -y php && apt-get install -y ant
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer && chmod +x /usr/local/bin/composer
-# Remove default node
-RUN apt-get remove node* -y
-# Install node with NVM
-RUN curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash && source ~/.profile && nvm install v8.9.4
 # Install Dependets plugin pm
-RUN apt-get install -y phploc && apt-get install -y php-codesniffer && apt-get install -y phpmd && apt-get install -y pdepend && apt-get install -y phpunit && apt-get install -y phpdox && npm install -g gulp
+RUN apt-get install -y phploc && apt-get install -y php-codesniffer && apt-get install -y phpmd && apt-get install -y pdepend && apt-get install -y phpunit && apt-get install -y phpdox && apt-get install -y nodejs && npm install -g gulp
 ENTRYPOINT ["/bin/bash"]
