--- a/BuildBot/Dockerfile
+++ b/BuildBot/Dockerfile
@@ -1,6 +1,8 @@
 # Base Image
-FROM node:8.9-alpine
+FROM node:8.9-stretch
 
 RUN cat /etc/os-release
+RUN node -v
+RUN apt-get update -y
 
 ENTRYPOINT ["/bin/bash"]
