--- a/Plugin-dev/Dockerfile
+++ b/Plugin-dev/Dockerfile
@@ -1,7 +1,8 @@
-FROM node:8.9-stretch
+FROM debian-stretch
 
 RUN cat /etc/os-release
-RUN node -v
+RUN apt-get update -y
 RUN apt-get install -y php
+RUN node -v
 RUN php -v
 ENTRYPOINT ["/bin/bash"]
