--- a/Plugin-dev/Dockerfile
+++ b/Plugin-dev/Dockerfile
@@ -2,7 +2,11 @@ FROM debian:stretch
 
 RUN cat /etc/os-release
 RUN apt-get update -y
-RUN apt-get install -y php
-RUN node -v
+RUN apt-get update -y && apt-get -y install unzip && apt-get -y install software-properties-common
+RUN apt-get update -y && apt-get install build-essential -y && apt-get install file -y && apt-get install apt-utils -y && apt-get -y install jq && apt-get -y install jq awscli && apt-get install -y php && apt-get install -y ant
+# Install Composer
+RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer && chmod +x /usr/local/bin/composer
+# Install Dependets plugin pm
+RUN apt-get install -y phploc && apt-get install -y php-codesniffer && apt-get install -y phpmd && apt-get install -y pdepend && apt-get install -y phpunit && apt-get install -y phpdox
 RUN php -v
 ENTRYPOINT ["/bin/bash"]
