--- a/Plugin-dev/Dockerfile
+++ b/Plugin-dev/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update -y
 RUN apt-get update -y && apt-get -y install unzip && apt-get -y install software-properties-common
 RUN apt-get update -y && apt-get install build-essential -y && apt-get install file -y && apt-get install apt-utils -y && apt-get -y install jq && apt-get -y install jq awscli && apt-get install -y php && apt-get install -y ant
 #Install CURL
-RUN apt-get install curl
+RUN apt-get install curl -y
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer && chmod +x /usr/local/bin/composer
 # Install Dependets plugin pm
