--- a/BuildBot/Dockerfile
+++ b/BuildBot/Dockerfile
@@ -6,6 +6,7 @@ RUN node -v
 RUN apt-get update -y && apt-get -y install unzip && apt-get -y install software-properties-common
 # Install Build Essentials
 RUN apt-get install build-essential -y && apt-get install file -y && apt-get install apt-utils -y && apt-get -y install jq && apt-get -y install jq awscli && apt-get install -y php && apt-get install -y ant
+RUN echo '***********************' && php -v && echo '***********************'
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer && chmod +x /usr/local/bin/composer
 # Install Dependets plugin pm
