--- a/Plugin-dev/Dockerfile
+++ b/Plugin-dev/Dockerfile
@@ -12,7 +12,7 @@ RUN apt-get install php7.1 -y
 # Install Build Essentials
 #RUN apt-get update
 RUN apt-get install build-essential -y && apt-get install file -y && apt-get install apt-utils -y && apt-get -y install jq && apt-get -y install jq awscli && apt-get install -y php && apt-get install -y ant
-RUN update-alternatives --set php /usr/bin/php7.1# Install Composer
+# Install Composer
 RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer && chmod +x /usr/local/bin/composer
 RUN apt-get install -y phploc && apt-get install -y php-codesniffer && apt-get install -y phpmd && apt-get install -y pdepend && apt-get install -y phpunit && apt-get install -y phpdox 
 RUN npm install -g gulp
