--- a/pluginPM/Dockerfile
+++ b/pluginPM/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update -y && apt-get -y install unzip && apt-get -y install software
 # Install Build Essentials
 #RUN apt-get update
 RUN apt-get install build-essential -y && apt-get install file -y && apt-get install apt-utils -y && apt-get -y install jq && apt-get -y install jq awscli && apt-get install -y php && apt-get install -y ant
-RUN echo '***********************' && php -v && echo '***********************'
+RUN echo '**********************************************'
 RUN apt-get install -y php7.1 
 RUN update-alternatives --set php /usr/bin/php7.1# Install Composer
 RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer && chmod +x /usr/local/bin/composer
