--- a/pluginPM/Dockerfile
+++ b/pluginPM/Dockerfile
@@ -1,19 +1,9 @@
 # Base Image
-FROM node:8.9-stretch
+FROM amazonlinux:2017.09
 
-RUN cat /etc/os-release
-RUN node -v
-RUN apt-get update -y && apt-get -y install unzip && apt-get -y install software-properties-common
-#RUN apt-get -y install php7.1
-# Install Build Essentials
-#RUN apt-get update
-RUN apt-get install build-essential -y && apt-get install file -y && apt-get install apt-utils -y && apt-get -y install jq && apt-get -y install jq awscli && apt-get install -y php && apt-get install -y ant
-RUN echo '**********************************************'
-RUN apt-get install -y php7.1 
-RUN update-alternatives --set php /usr/bin/php7.1# Install Composer
-RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer && chmod +x /usr/local/bin/composer
-# Install Dependets plugin pm
-RUN apt-get install -y phploc && apt-get install -y php-codesniffer && apt-get install -y phpmd && apt-get install -y pdepend && apt-get install -y phpunit && apt-get install -y phpdox 
-RUN npm install -g gulp
+RUN yum install -y php70-gd php70-mysqlnd php70-soap php70-mbstring php70-ldap php70-mcrypt php70-xml php70-imap 
+RUN yum install -y php72-gd php72-mysqlnd php72-soap php72-mbstring php72-ldap php72-mcrypt php72-xml php72-imap 
+RUN yum install -y php56-gd php56-mysqlnd php56-soap php56-mbstring php56-ldap php56-mcrypt php56-xml php56-imap
+
 ENTRYPOINT ["/bin/bash"]
 
