--- a/pluginPM/Dockerfile
+++ b/pluginPM/Dockerfile
@@ -1,6 +1,7 @@
 # Base Image
 FROM amazonlinux:2017.09
 RUN cat /etc/os-release
+RUN yum install -y nodejs
 RUN node -v
 RUN apt-get update -y && apt-get -y install unzip && apt-get -y install software-properties-common
 RUN yum install -y php70-gd
