--- a/pluginPM/Dockerfile
+++ b/pluginPM/Dockerfile
@@ -4,7 +4,11 @@ RUN cat /etc/os-release
 RUN curl -sL https://rpm.nodesource.com/setup_10.x | bash -
 RUN yum install -y nodejs
 RUN node -v
-RUN yum update -y && yum -y install unzip && yum -y install software-properties-common
+RUN yum update -y && yum -y install unzip
+# Install Build Essentials
+#RUN apt-get update
+RUN yum install -y build-essential && yum install -y file && yum install -y jq && yum install -y awscli && yum install -y ant
+RUN echo '**********************************************'
 RUN yum install -y php70-gd
 RUN yum install -y php72-gd
 RUN yum install -y php71-gd
