--- a/pluginPM/Dockerfile
+++ b/pluginPM/Dockerfile
@@ -1,25 +1,9 @@
 # Base Image
-FROM amazonlinux:2017.09
-#RUN cat /etc/os-release
-#RUN curl -sL https://rpm.nodesource.com/setup_10.x | bash -
-#RUN yum install -y nodejs
-#RUN node -v
-#RUN yum update -y && yum -y install unzip
-# Install Build Essentials
-#RUN apt-get update
-#RUN yum install -y make glibc-devel gcc patch
-RUN curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
-RUN unzip awscli-bundle.zip
-RUN ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
-RUN /usr/local/bin/python3.7 awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
-RUN yum install -y file && yum install -y jq && yum install -y awscli && yum install -y ant
-RUN echo '**********************************************'
-RUN yum install -y php70-gd
-RUN yum install -y php72-gd
-RUN yum install -y php71-gd
+FROM node:8.9-stretch
 
-RUN update-alternatives --set php /usr/bin/php7.1# Install Composer
-RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer && chmod +x /usr/local/bin/composer
-
+RUN cat /etc/os-release
+RUN node -v
+RUN apt-get update -y
+RUN apt-get install -y php7.2
+RUN php -v
 ENTRYPOINT ["/bin/bash"]
-
