--- a/pluginPM/Dockerfile
+++ b/pluginPM/Dockerfile
@@ -1,8 +1,8 @@
 # Base Image
-FROM node:14.9.0-stretch
+FROM debian:10
 
 RUN cat /etc/os-release
-RUN node -v
+#RUN node -v
 RUN apt-get update -y
 RUN apt-get install -y php7.2
 RUN php -v
