--- a/Stack-N265/conf/processmaker.conf
+++ b/Stack-N265/conf/processmaker.conf
@@ -3,7 +3,7 @@ server {
 	listen 80;
 	listen [::]:80;
 	#Change for server DNS name
-	server_name ~^(.+)$ ;
+	server_name localhost ;
 	#The following line must be added Only if phpMyAdmin is configured
 	#include /opt/phpMyAdmin/phpMyAdmin.conf;
 	
@@ -76,7 +76,7 @@ server {
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
 
-  server_name ~^(.+)$ ;
+  server_name localhost ;
 
   #Should point to where you SSL certificates are located
   ssl_certificate /etc/pki/tls/certs/localhost.crt;
