--- a/Stack-N275/conf/processmaker.conf
+++ b/Stack-N275/conf/processmaker.conf
@@ -3,7 +3,7 @@ server {
 	listen 80;
 	listen [::]:80;
 	#Change for server DNS name
-	server_name ~^(.+)$ ;
+	server_name localhost ;
 	#The following line must be added Only if phpMyAdmin is configured
 	#include /opt/phpMyAdmin/phpMyAdmin.conf;
 	
