--- a/Stack-N275/docker-compose.yml
+++ b/Stack-N275/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     ports:
       - 80:80
       - 443:443
+    volumes:
+      - /opt:/opt
     restart: always
     container_name: pmN275-app
     environment:
