--- a/Stack-N275/conf/processmaker.conf
+++ b/Stack-N275/conf/processmaker.conf
@@ -3,7 +3,7 @@ server {
 	listen 80;
 	listen [::]:80;
 	#Change for server DNS name
-	server_name localhost ;
+	server_name 127.0.0.1 ;
 	#The following line must be added Only if phpMyAdmin is configured
 	#include /opt/phpMyAdmin/phpMyAdmin.conf;
 	
@@ -35,9 +35,9 @@ server {
 		fastcgi_intercept_errors off;
 		fastcgi_buffers 8 16k;
 		fastcgi_buffer_size 32k;
-		fastcgi_connect_timeout 300;
-		fastcgi_send_timeout 300;
-		fastcgi_read_timeout 300;
+		fastcgi_connect_timeout 900;
+		fastcgi_send_timeout 900;
+		fastcgi_read_timeout 900;
 	}
 	
 	#Browser Caching
@@ -54,9 +54,9 @@ server {
 		fastcgi_intercept_errors off;
 		fastcgi_buffers 8 16k;
 		fastcgi_buffer_size 32k;
-		fastcgi_connect_timeout 300;
-		fastcgi_send_timeout 300;
-		fastcgi_read_timeout 300;
+		fastcgi_connect_timeout 900;
+		fastcgi_send_timeout 900;
+		fastcgi_read_timeout 900;
 	}
 	
 	
