--- a/Stack-N275/docker-compose.yml
+++ b/Stack-N275/docker-compose.yml
@@ -10,7 +10,10 @@ services:
       MYSQL_ROOT_PASSWORD: PM-Testdb
     container_name: pmN275-db
     command: 
-      --default-authentication-plugin=mysql_native_password
+      --default-authentication-plugin="mysql_native_password"
+      --optimizer-switch="derived_merge=off"
+      --sql-mode="STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
+      
   processmaker:
     depends_on:
       - mysql
