--- a/Stack-N275/conf/nginx.conf
+++ b/Stack-N275/conf/nginx.conf
@@ -39,4 +39,8 @@ http {
   #Use the following Load Balancer/Reverse Proxy Header if behind one of these devices
   real_ip_header X-Forwarded-For;
   set_real_ip_from 0.0.0.0/0;
+
+  client_header_timeout 3000;
+  client_body_timeout 3000;
+
 }
