--- a/Stack-N275/docker-compose.yml
+++ b/Stack-N275/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     restart: always
     container_name: pmN275-app
     environment:
-      PM_URL: https://artifacts.processmaker.net/generic/processmaker-3.7.0-5411.tar.gz
+      PM_URL: https://PM-URL
 
   phpmyadmin:
     depends_on:
